# WSST-CentrifugeRepo-2026

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt
app/Boards/F401RE/: .mxproject  CMakeLists.txt  F401RE.ioc
app/Boards/F411RE/: F411RE.ioc
app/Boards/F446RE/: F446RE.ioc
app/Core/Board/F401RE/: board.cmake
app/Core/Board/F411RE/: board.cmake
app/Core/Board/F446RE/: board.cmake
app/boards/F401RE/: .mxproject  F401RE.ioc
app/boards/F401RE/Core/Inc/: stm32f4xx_it.h
app/boards/F401RE/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
app/boards/F401RE/cmake/stm32cubemx/: CMakeLists.txt
app/boards/F411RE/: .mxproject  CMakeLists.txt  F411RE.ioc
app/boards/F411RE/Core/Src/: main.c
app/boards/F411RE/cmake/stm32cubemx/: CMakeLists.txt
app/boards/F446RE/: F446RE.ioc
app/boards/F446RE/Core/Src/: main.c
app/boards/F446RE/cmake/stm32cubemx/: CMakeLists.txt
app/boardss/F401RE/cmake/stm32cubemx/: CMakeLists.txt
app/boardss/F411RE/: .mxproject
app/boardss/F446RE/: CMakeLists.txt
app/core/F401RE/: board.cmake
app/core/F411RE/: board.cmake
app/core/F446RE/: board.cmake
app/drivers/inc/: uart.h
app/drivers/src/: uart.c
app/init/: .bashrc-krish
app/src/: app.c  main.c
docs/: actuationSysArch.md  gitBestPractices.md  heatingSysArch.md  ironOSBuildFlash.md  stm32BestPractices.md  sysArch.md  systemOverview.md
docs/architectureDiagrams/: actuationSysArch.md  centrifugeFlightOperations.md  systemOverview.md
firmware/ironos/fallback/: README.md
gui/: placeholder.md
scripts/: build_ironos_pinecilv2.sh  flash_pinecilv2.sh
tools/firmware/ironos/current/: README.md
tools/firmware/ironos/default/: README.md
tools/firmware/ironos/tracked/: README.md
tools/scripts/: build_ironos_pinecilv2.sh  flash_pinecilv2.sh
